# foxlog

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  example.c  example.cpp
include/: foxlog.h
old/: log.h
work/: foxlog.c  foxlog.h  main.c  sample.c  sample.h  sample1.c  sample2.c
